Fix broken css class 'check' (in footer.component.scss)

--- a/src/app/components/shared/footer/footer.component.scss
+++ b/src/app/components/shared/footer/footer.component.scss
@@ -66,7 +66,7 @@ mat-icon {
   width: 25px;
   line-height: 100%!important;
   position: absolute;
-  top: 16px;
-  right: -6.5px;
+  top: 15px;
+  right: 19.5px;
   color: white;
 }
